crates/agent/src/evolution/snapshots/agent__evolution__test__evolution_adds_collections_to_the_draft_if_necessary.snap
---
source: crates/agent/src/evolution/test.rs
expression: evolved_collections
---
- old_name: evolution/CollectionA
  new_name: evolution/CollectionA
  updated_materializations:
    - evolution/MaterializationA
  updated_captures: []
- old_name: evolution/CollectionC
  new_name: evolution/CollectionC_v2
  updated_materializations:
    - evolution/MaterializationB
  updated_captures:
    - evolution/CaptureB

