crates/agent/src/evolution/snapshots/agent__evolution__test__evolution_affects_specific_materializations_when_requested-2.snap
---
source: crates/agent/src/evolution/test.rs
expression: draft_specs
---
[
    Record {
        catalog_name: "evolution/MaterializationD",
        spec_type: Some(
            Materialization,
        ),
        spec: Some(
            Object {
                "bindings": Array [
                    Object {
                        "backfill": Number(10),
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("testTargetThingA"),
                        },
                        "source": String("evolution/CollectionA"),
                    },
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("testTargetThingC"),
                        },
                        "source": String("evolution/CollectionC"),
                    },
                ],
                "endpoint": Object {
                    "connector": Object {
                        "config": Object {},
                        "image": String("matImage:v1"),
                    },
                },
            },
        ),
        expect_pub_id: Some(
            bbbbbbbbbbbbbbbb,
        ),
    },
]
