crates/agent/src/evolution/snapshots/agent__evolution__test__evolution_affects_specific_materializations_when_requested.snap
---
source: crates/agent/src/evolution/test.rs
expression: evolved_collections
---
[
    EvolvedCollection {
        old_name: "evolution/CollectionA",
        new_name: "evolution/CollectionA",
        updated_materializations: [
            "evolution/MaterializationD",
        ],
        updated_captures: [],
    },
]
